# sfml-gui-test

./: CMakeLists.txt  README
cmake/modules/: FindCEGUI.cmake
data/layouts/: test.layout
src/: main.cpp  manual_window_creation.cpp  xml_window_creation.cpp
